testsuite/bsc.codegen/strings/StringTail_Empty.bsv
(* synthesize *)
module sysStringTail_Empty();
   rule r;
      $display(stringTail(""));
   endrule
endmodule
